2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* s_printf.c (s_cputs): New function.
	(s_puts): Reimplement in terms of this.
	(print_nr): Take additional parameter, the putchar routine to use.
	(print_signed_nr): Likewise.
	(s_cvprintf): New function.
	(s_vprintf): Reimplement in terms of this.
	(s_cprintf): New function.
	(s_printf): Call s_cvprintf, not s_vprintf.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* headers.m4: New file.
	* Makefile.am [ENABLE_TESTS]: Don't build package's libraries.

	* assert.h [_ENABLE_TESTS]: Handle as done with [_L4_TEST_ENVIRONMENT].
	* errno.h [_ENABLE_TESTS]: Handle specially.
	* features.h [_ENABLE_TESTS]: Use the system's standard file instead.
	
	* sys/cdefs.h: New file, from today's glibc CVS HEAD.
	[_ENABLE_TESTS]: Use the system's standard file instead.
	* bits/wchar.h: Likewise.
	* time.h: Likewise.
	* stdint.h: Likewise.

	* stdio.h: New file.
	* stdlib.h: Likewise.
	* string.h: Likewise.
	* unistd.h: Likewise.
	* bits/types.h: Likewise.
	* sys/types.h: Likewise.

	* Makefile.am (t_setjmp_CPPFLAGS): Remove special `printf' handling.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* ia32-crt0.S: Increase size of stack.
	(stack): Declare.
	(stack_end): Likewise.

2008-05-28  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn): Update use of
	folio_object_alloc to be consistent with new API.

2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(libc_parts_a_CPPFLAGS): Set to $(USER_CPPFLAGS).
	(libc_parts_a_CFLAGS): New variable.
	(libc_kernel_a_CPPFLAGS): Set to $(KERNEL_CPPFLAGS).
	(libc_kernel_a_CFLAGS): New variable.
	(t_setjmp_CPPFLAGS): Remove use of $(COMMON_CPPFLAGS) with
	$(CHECK_CPPFLAGS).

2008-02-20  Thomas Schwinge  <tschwinge@gnu.org>

	* alloca.h: New file, from today's glibc CVS HEAD.

2008-02-16  Neal H. Walfield  <neal@gnu.org>

	* process-spawn.c (process_spawn) [RM_INTERN]: Don't take
	LRU_LOCK.
